<resources>
    <string name="app_name">Edumeet</string>
    <string name="text_next">Next</string>
    <string name="enter_text">Are you already using EducatorHub? <u><font fgcolor='#FF353E81'> Enter</font></u></string>
    <string name="not_registered">Not registered yet?<u><font fgcolor='#FF353E81'> Registration</font></u></string>
    <string name="already_registered">Already register?<u><font fgcolor='#FF353E81'> Login</font></u></string>
    <string name="text_title_page_1">Confidence</string>
    <string name="text_description_page_1">With speaking lessons, you will speak in a short time</string>
    <string name="text_title_page_2">Patience</string>
    <string name="text_description_page_2">Take your time to learn. Develop a habit and make it a part of your daily life</string>
    <string name="text_title_page_3">Modern security</string>
    <string name="text_description_page_3">We will provide you with the best and most modern security</string>
    <string name="enter">Enter</string>
    <string name="number">Number</string>
    <string name="text_prefix_code">+998</string>
    <string name="prefix_text_number">000 00 00</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="main">Main</string>
    <string name="listening">Listening</string>
    <string name="reading">Reading</string>
    <string name="speaking">Speaking</string>
    <string name="writing">Writing</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="axmet_dauletmuratov">Axmet Dauletmuratov</string>
    <string name="login">Login</string>
    <string name="group">Group</string>
    <string name="notification">Notification</string>
    <string name="reading_text">Reading Text</string>
    <string name="go_to_test">Go to Test</string>
    <string name="task">Task</string>
    <string name="congrats">Congratulations</string>
    <string name="correct_answers_s">Correct answers: %s</string>
    <string name="tablo">%s/%s</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone number</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="save">Save</string>
    <string name="edit_name">Edit name</string>
    <string name="not_found">Not found</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="rating">Rating</string>
    <string name="topic">Topic</string>
    <string name="response">Response:</string>
    <string name="select_ai">AI Function</string>
    <string name="go_to_ai">Go to Ai</string>
    <string name="custom_hint_text">Hint!</string>
    <string name="slide_to_cancel">Slide to Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="time">%d\'</string>
    <string name="hold_to_record_audio">Hold to record, release to send</string>

    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
</resources>