<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/standard_icon_size"
                android:layout_height="@dimen/standard_icon_size"
                android:layout_margin="@dimen/small_125"
                android:padding="@dimen/small_125"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="@color/typography_2"
                android:textSize="@dimen/medium_size_text"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="@id/btn_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_150"
            android:layout_marginTop="@dimen/normal_150"
            android:fontFamily="@font/font_bold"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/typography_2"
            android:textSize="@dimen/medium_size_text"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_150"
            android:layout_marginTop="@dimen/small_75"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:background="@drawable/bg_edittext_unselected"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_150"
            android:layout_marginTop="@dimen/normal_150"
            android:fontFamily="@font/font_bold"
            android:gravity="center_horizontal"
            android:text="@string/number"
            android:textColor="@color/typography_2"
            android:textSize="@dimen/medium_size_text"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_150"
            android:layout_marginTop="@dimen/small_125"
            android:backgroundTint="@color/inputs_color"
            app:strokeColor="#9094B5"
            app:cardCornerRadius="@dimen/normal_100">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/et_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_flag"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/normal_100"
                    android:src="@drawable/pic_flag_uzb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/prefix_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_225"
                    android:layout_marginStart="@dimen/normal_100"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/text_prefix_code"
                    android:textColor="@color/typography_2"
                    android:textSize="@dimen/medium_size_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_flag"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_drop_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_100"
                    android:src="@drawable/ic_drop_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/prefix_text"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_150"
                    android:background="@android:color/transparent"
                    android:digits="1234567890 "
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/prefix_text_number"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textColor="@color/typography_2"
                    android:textColorHint="#4B4B4B"
                    android:textCursorDrawable="@drawable/text_cursor_drawable"
                    android:textSize="@dimen/medium_size_text"
                    app:layout_constraintBottom_toBottomOf="@id/prefix_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_drop_down"
                    app:layout_constraintTop_toTopOf="@id/prefix_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_150"
            android:layout_marginTop="@dimen/normal_150"
            android:fontFamily="@font/font_bold"
            android:gravity="center_horizontal"
            android:text="@string/password"
            android:textColor="@color/typography_2"
            android:textSize="@dimen/medium_size_text"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_150"
            android:layout_marginTop="@dimen/small_75"
            app:hintEnabled="false"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/bg_edittext_unselected"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_150"
            android:layout_marginTop="@dimen/normal_150"
            android:fontFamily="@font/font_bold"
            android:gravity="center_horizontal"
            android:text="@string/group"
            android:textColor="@color/typography_2"
            android:textSize="@dimen/medium_size_text"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_150"
            android:layout_marginTop="@dimen/small_75"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group"
                android:background="@drawable/bg_edittext_unselected"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_150"
            android:layout_marginTop="@dimen/large_150"
            android:backgroundTint="@color/brand_color"
            android:fontFamily="@font/font_bold"
            android:paddingVertical="@dimen/normal_100"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_125"
            app:cornerRadius="@dimen/normal_100"
            app:layout_constraintBottom_toTopOf="@id/tv_enter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <TextView
                android:id="@+id/go_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/normal_100"
                android:fontFamily="@font/font_regular"
                android:text="@string/already_registered"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/brand_color"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>