<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PasswordConfirmationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/standard_icon_size"
                android:layout_height="@dimen/standard_icon_size"
                android:layout_margin="@dimen/small_125"
                android:padding="@dimen/small_125"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:gravity="center_horizontal"
                android:text="@string/password_confirmation"
                android:textColor="@color/typography_2"
                android:textSize="@dimen/medium_size_text"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="@id/btn_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_100"
            android:fontFamily="@font/font_bold"
            android:text="@string/phone_number"
            android:textColor="@color/typography_5" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/normal_100"
            app:cardCornerRadius="@dimen/small_150"
            app:cardElevation="0dp"
            app:contentPadding="@dimen/normal_100"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:inputType="number"
                    android:layout_marginEnd="@dimen/normal_100"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:maxLines="1"
                    android:textColor="@color/typography_2"
                    android:textSize="@dimen/normal_text_100"
                    tools:ignore="SpUsage" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_100"
            android:fontFamily="@font/font_bold"
            android:text="@string/password"
            android:textColor="@color/typography_5" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_100"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/normal_100"
            app:cardCornerRadius="@dimen/small_150"
            app:cardElevation="0dp"
            app:contentPadding="@dimen/normal_100"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/normal_100"
                    android:background="@color/transparent"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:maxLines="1"
                    android:textColor="@color/typography_2"
                    android:textSize="@dimen/normal_text_100"
                    tools:ignore="SpUsage" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_150"
                android:layout_marginTop="@dimen/large_150"
                android:backgroundTint="@color/brand_color"
                android:fontFamily="@font/font_bold"
                android:paddingVertical="@dimen/normal_100"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_125"
                app:cornerRadius="@dimen/normal_100"
                app:layout_constraintBottom_toTopOf="@id/tv_enter" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>